Use npm ci on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ language: node_js
 node_js:
   - "lts/*"
   - "node"
+before_install:
+  - npm i -g npm@latest
+install:
+  - npm ci
 script: npm run ci
