--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "eslint-plugin-react": "^4.3.0",
     "file-loader": "^0.9.0",
     "husky": "^0.13.3",
-    "jest": "^18.0.0",
-    "jest-cli": "^20.0.4",
+    "jest": "^22.4.2",
+    "jest-cli": "^23.0.0-alpha.0",
     "lint-staged": "^3.4.1",
     "mockdate": "^2.0.1",
     "moment": "^2.21.0",
